--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
     hello my name is abbas and i am checking git status
     <h2>hello how are you?</h2>
+    <h3>heading 3</h3>
 </body>
 </html>
